# sesh

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: auto-tag.yml
src/: cli.rs  config.rs  context.rs  discovery.rs  error.rs  integrations.rs  lock.rs  main.rs  mcp.rs  scripts.rs  session.rs  vscode.rs  worktree.rs
src/commands/: activate.rs  auth.rs  checkout.rs  completions.rs  doctor.rs  exec.rs  init.rs  list.rs  log.rs  mod.rs  pr.rs  resume.rs  start.rs  status.rs  stop.rs
