[package]
name = "sesh"
version = "0.1.0"
edition = "2024"
description = "Multi-repo worktree session manager for AI-assisted development"
repository = "https://github.com/richikchanda1999/sesh"
homepage = "https://github.com/richikchanda1999/sesh"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
