[package]
name = "sesh"
version = "0.1.3"
edition = "2024"
description = "Multi-repo worktree session manager for AI-assisted development"
repository = "https://github.com/richikchanda1999/sesh"
homepage = "https://github.com/richikchanda1999/sesh"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
console = "0.16.2"
indicatif = "0.18.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
clap_complete = "4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
